--- a/scss/rosterDisplay.scss
+++ b/scss/rosterDisplay.scss
@@ -2,59 +2,106 @@
 @import "myVariables";
 
 .rosterDisplay {
-  display: flex;
-  justify-content: space-between;
-  width: $tableWidth;
-}
-
-table {
-  border: $tableBorder;
-  // width: 100%;
-}
-
-thead tr {
-  display: block;
-  position: relative;
-}
-
-tbody {
-  display: block;
-}
-
-th {
-  width: $tableWidth / 4;
+  table {
+    border: $tableBorder;
+  }
   
-  &:last-of-type {
-    padding-right: 1em;
+  thead tr {
+    display: block;
+    position: relative;
   }
-}
-
-tr {
-  outline: $tableBorder;
-  padding-top: 0.25em;
-  padding-bottom: 0.25em;
-  &:nth-of-type(odd) {
-    background: #eeeeee;
+  
+  tbody {
+    display: block;
+    height: 20em;
+    overflow: auto;
   }
-}
-
-td {
-  text-align: center;
-  width: $tableWidth / 4;
-}
-
-.clickable {
-  cursor: pointer;
-}
-
-@media (max-width: $midpoint) {
-  .rosterDisplay {
-    flex-flow: column nowrap;
+  
+  th {
+    width: $tableWidth / 4;
+    
+    &:last-of-type {
+      padding-right: 1em;
+    }
+  }
+  
+  tr {
+    outline: $tableBorder;
+    padding-top: $trPadding;
+    padding-bottom: $trPadding;
+    &:nth-of-type(odd) {
+      background: $trColor;
+    }
+  }
+  
+  td {
+    text-align: center;
+    width: $tableWidth / 4;
+  }
+  
+  .clickable {
+    cursor: pointer;
+  }
+  
+  @media (max-width: $midpoint) {
+    /* Force table to not be like tables anymore */
+    table, p, h5 {
+      width: 58%;
+    }
+    
+    table, thead, tbody, th, td, tr { 
+    	display: block; 
+    }
+    
+    /* Hide table headers (but not display: none;, for accessibility) */
+    thead tr { 
+      position: absolute;
+      top: -9999px;
+      left: -9999px;
+    }
+    
+    tr { 
+      border: 1px solid #ccc;
+    }
+    
+    td { 
+      /* Behave  like a "row" */
+      border: none;
+      position: relative;
+      padding-left: 6em;
+      text-align: left;
+      border-bottom: 1px solid black;
+    }
+    
+    td:before { 
+      /* Now like a table header */
+      position: absolute;
+      /* Top/left values mimic padding */
+      top: 0.15em;
+      left: 0.3em;
+      text-align: left;
+      padding-right: 2em;
+      white-space: nowrap;
+    }
+    
+    /*
+    Label the data
+    */
+    td:nth-of-type(1):before { content: "Name"; }
+    td:nth-of-type(2):before { content: "Position"; }
+    td:nth-of-type(3):before { content: "Club"; }
+    td:nth-of-type(4):before { content: "Points"; }
+    td:nth-of-type(5):before { content: "Starter?"; }
+    td:nth-of-type(6):before { content: "On Bench?"; }
+    td:nth-of-type(7):before { content: "Remove"; }
   }
 }
 
 @media (min-width: $gtMidpoint) {
   .rosterDisplay {
+    display: flex;
+    justify-content: space-around;
     flex-flow: row nowrap;
+    width: $tableWidth;
   }
 }
